ajustando list